docs/api/qiskit/2.4/index.mdx
---
title: Qiskit SDK API documentation (v2.4)
description: Index of all the modules in qiskit v2.4.
---

<span id="module-qiskit" />

# API Reference

Circuit construction:

*   [Quantum circuit model (`qiskit.circuit`)](circuit)
*   [`QuantumCircuit` class](qiskit.circuit.QuantumCircuit)
*   [Circuit annotations (`qiskit.circuit.annotation`)](circuit_annotation)
*   [Classical expressions (`qiskit.circuit.classical`)](circuit_classical)
*   [Circuit Library (`qiskit.circuit.library`)](circuit_library)
*   [Random Circuits (`qiskit.circuit.random`)](circuit_random)
*   [Singleton instructions (`qiskit.circuit.singleton`)](circuit_singleton)

Quantum information:

*   [Quantum Information (`qiskit.quantum_info`)](quantum_info)

Transpilation:

*   [Circuit Converters (`qiskit.converters`)](converters)
*   [DAG Circuits (`qiskit.dagcircuit`)](dagcircuit)
*   [Passmanager (`qiskit.passmanager`)](passmanager)
*   [Circuit Synthesis (`qiskit.synthesis`)](synthesis)
*   [Approximate Quantum Compiler (`qiskit.synthesis.unitary.aqc`)](qiskit.synthesis.unitary.aqc)
*   [Transpiler (`qiskit.transpiler`)](transpiler)
*   [Transpiler Passes (`qiskit.transpiler.passes`)](transpiler_passes)
*   [Synthesis Plugins (`qiskit.transpiler.passes.synthesis.plugin`)](transpiler_synthesis_plugins)
*   [Preset Passmanagers (`qiskit.transpiler.preset_passmanagers`)](transpiler_preset)
*   [Transpiler Stage Plugin Interface (`qiskit.transpiler.preset_passmanagers.plugin`)](transpiler_plugins)

Primitives and providers:

*   [Primitives (`qiskit.primitives`)](primitives)
*   [Providers Interface (`qiskit.providers`)](providers)
*   [BasicProvider: Python-based Simulators (`qiskit.providers.basic_provider`)](providers_basic_provider)
*   [Fake Provider (`qiskit.providers.fake_provider`)](providers_fake_provider)

Results and visualizations:

*   [Experiment Results (`qiskit.result`)](result)
*   [Visualizations (`qiskit.visualization`)](visualization)

Serialization:

*   [OpenQASM 2 (`qiskit.qasm2`)](qasm2)
*   [OpenQASM 3 (`qiskit.qasm3`)](qasm3)
*   [QPY serialization (`qiskit.qpy`)](qpy)

Other:

*   [C API interface from Python (`qiskit.capi`)](capi)
*   [Compilation Routines (`qiskit.compiler`)](compiler)
*   [Top-level exceptions (`qiskit.exceptions`)](exceptions)
*   [Root namespace (`qiskit`)](root)
*   [Utilities (`qiskit.utils`)](utils)

